# hello-py

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  codecov.yml  mkdocs.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: changelog.md  gen_ref_pages.py  getting-started.md  index.md
src/hello_py/: __init__.py  hello.py
tests/: conftest.py  test_hello.py  test_package.py
